--- a/.github/workflows/render-openapi.yml
+++ b/.github/workflows/render-openapi.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Render OpenAPI docs from Insomnia files
+name: Render OpenAPI Docs
 
 # Controls when the workflow will run
 on:
@@ -23,7 +23,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
         with:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
           fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
@@ -40,3 +40,14 @@ jobs:
       - name: Save openapi.yml
         run: echo "${{ steps.read-openapi-yaml.outputs.data }}" >> openapi.yml
 
+      # Render openapi.yml to HTML with ReDoc
+      - name: redoc-cli test
+        uses: seeebiii/redoc-cli-github-action@v10
+        with:
+          args: 'bundle openapi.yml -o index.html'
+
+      # Commit changes
+      - name: Commit & Push changes
+        uses: actions-js/push@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
