--- a/.github/workflows/render-openapi.yml
+++ b/.github/workflows/render-openapi.yml
@@ -38,7 +38,7 @@ jobs:
 
       # Save content as openapi.yml
       - name: Save openapi.yml
-        run: echo "${{ steps.read-openapi-yaml.outputs.data }}" >> openapi.yaml
+        run: echo '${{ steps.read-openapi-yaml.outputs.data }}' > openapi.yaml
 
       # Render openapi.yml to HTML with Redoc
       - name: Render HTML Docs
